cmake_minimum_required(VERSION 3.16)
#SET(CMAKE_C_COMPILER clang)
PROJECT(urcu-test-app)
ADD_EXECUTABLE(urcu-test-app main.c)
SET(CMAKE_C_FLAGS "-O3 -ggdb -Wall")
TARGET_LINK_LIBRARIES(urcu-test-app urcu-memb urcu-cds numa pthread)
set_property(TARGET urcu-test-app PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
