[package]
name = "urcu-test-app"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
core_affinity = "0.5"
urcu-ht = { path = "../../" }

[profile.release-lto]
inherits = "release"
lto = true
debug = true

[features]
qsbr = [ "urcu-ht/qsbr" ]
memb = [ "urcu-ht/memb" ]